delete initial hiding of chat2 and chat3 to prevent page elements from shifting on click eventhandler

--- a/assets/css/page-structure.css
+++ b/assets/css/page-structure.css
@@ -507,7 +507,8 @@ p {
     }
 
     #chat2, #chat3 {
-        font-size: 10px; 
+        font-size: 10px;
+        height: 5%;  
     }
     .tech-icon {
         width: 20px; 
