--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -52,6 +52,7 @@
     justify-content: center; 
     font-size: 15px; 
     text-align: center; 
+    height: 5%;  
 }
 
 /* Styling for links */
